# rustwhiteboard

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: canvas.rs  drawio.rs  llm.rs  main.rs  ocr.rs  shapes.rs
src/components/: Canvas.tsx  Preview.tsx  StatusBar.tsx  Toolbar.tsx  index.ts
src/lib/: api.ts
src/styles/: global.css
